[gd_scene load_steps=2 format=3 uid="uid://des73ybphh5gl"]

[ext_resource type="Script" path="res://ship/ship.gd" id="1_bvt4b"]

[node name="Ship" type="CharacterBody2D"]
script = ExtResource("1_bvt4b")

[node name="TracerTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, -8, 1, -3, 1, 8, -1, 8, -1, -3)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -8, 1, -3, 1, 8, -1, 8, -1, -3)

[connection signal="timeout" from="TracerTimer" to="." method="_on_tracer_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
